[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkapi-otel"
version = "0.2.0"
description = "OpenTelemetry integration for HawkAPI — plugin + middleware"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "HawkAPI Contributors", email = "hawkapi@users.noreply.github.com" },
]
keywords = ["hawkapi", "opentelemetry", "otel", "observability", "tracing", "metrics", "logs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "hawkapi>=0.1.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
]

[project.urls]
Homepage = "https://pypi.org/project/hawkapi-otel/"
Repository = "https://github.com/Hawk-API/hawkapi-otel"
Issues = "https://github.com/Hawk-API/hawkapi-otel/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hawkapi_otel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class:pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
